fix video alignment bug

--- a/public/styles/board.css
+++ b/public/styles/board.css
@@ -160,6 +160,11 @@ button:hover {
   z-index: 3;
 }
 
+#remote-videos {
+  display: flex;
+  flex-direction: column;
+}
+
 video {
   background-color: #eee;
   border-radius: 3px;
